# api-test-framework

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  pytest.ini  run_tests.py
config/: base.yaml  dev.yaml  prod.yaml  staging.yaml
core/: config_loader.py  http_client.py  logger.py  schema_validator.py
core/auth/: oauth_manager.py  token_cache.py
docs/: ADR.md  CONTRIBUTING.md
factories/: base_factory.py  mfe_factory.py
schemas/journeys/: journeys_response.json
schemas/manifest/: manifest_response.json
schemas/pages/: pages_response.json
schemas/shared/: error_response.json
tests/: conftest.py
tests/contrato/: test_manifest.py  test_pages_journeys.py
tests/seguranca/: test_autenticacao.py
